--- a/codigo.html
+++ b/codigo.html
@@ -1,7 +1,12 @@
 <html>
-<head>
-</head>
-<body>
-<h1>Hola</h1>
-</body>
+	<head>
+		<title>Mi primera pagina web</title>
+	</head>
+	<body>
+		<h1>Jorge Eduardo Arana Jimenez</h1>
+		<h2>288130</h2>
+		<p>Lo que espero aprender al final de este curso
+		es la creacion de paginas y recursos web de todo tipo
+		llendo desde la creacion de documantos HTML, pasando por css, el uso de JavaScript y si se puede el uso de ruby.</p>
+	</body>
 </html>
