Inclusion de biografia.html
Se incluyo el archivo biografia.html en la carpeta de proyecto asi
como una nueva carpeta llamada media con una imagen la cual esta
agregada en biografia.html, ademas se edito el codigo de codigo.html
para tener un link directo a biografia.html.

--- a/codigo.html
+++ b/codigo.html
@@ -8,5 +8,8 @@
 		<p>Lo que espero aprender al final de este curso
 		es la creacion de paginas y recursos web de todo tipo
 		llendo desde la creacion de documantos HTML, pasando por css, el uso de JavaScript y si se puede el uso de ruby.</p>
+		<ul>
+			<li><a href="bibliografia.html">Mi Bibliografia</a></li>
+		</ul>
 	</body>
 </html>
