--- a/codigo.html
+++ b/codigo.html
@@ -3,13 +3,16 @@
 		<title>Mi primera pagina web</title>
 	</head>
 	<body>
+		<header>
+			<ul>
+				<li><a href="bibliografia.html">Mi Bibliografia</a></li>
+			</ul>
+		</header>
 		<h1>Jorge Eduardo Arana Jimenez</h1>
 		<h2>288130</h2>
 		<p>Lo que espero aprender al final de este curso
 		es la creacion de paginas y recursos web de todo tipo
 		llendo desde la creacion de documantos HTML, pasando por css, el uso de JavaScript y si se puede el uso de ruby.</p>
-		<ul>
-			<li><a href="bibliografia.html">Mi Bibliografia</a></li>
-		</ul>
+
 	</body>
 </html>
